argocd/apps/klnavi/overlays/prod/opentripplanner-vision-impaired.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentripplanner-vision-impaired
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentripplanner-vision-impaired
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  minReadySeconds: 100
  template:
    metadata:
      labels:
        app: opentripplanner-vision-impaired
    spec:
      containers:
        - image: docker.io/opentripplanner/opentripplanner:2.5.0
          imagePullPolicy: IfNotPresent
          name: opentripplanner
          args: ["--load"]
          volumeMounts:
            - name: opentripplanner-vision-impaired-data
              mountPath: /var/opentripplanner
          ports:
            - containerPort: 8080
      volumes:
        - name: opentripplanner-vision-impaired-data
          persistentVolumeClaim:
            claimName: opentripplanner-vision-impaired-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: opentripplanner-vision-impaired-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: opentripplanner-vision-impaired
