argocd/apps/klnavi/overlays/prod/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /pedestrian/standard
      - /pedestrian/vision-impaired
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
spec:
  headers:
    customRequestHeaders:
      X-Content-Type-Options: nosniff
      X-Frame-Options: DENY
      X-XSS-Protection: 1; mode=block
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    frameDeny: true
    contentTypeNosniff: true
    browserXssFilter: true
    referrerPolicy: same-origin
    permissionsPolicy: "accelerometer=(), camera=(), geolocation=(self https://klnavi.de), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: www-to-non-www
spec:
  redirectRegex:
    regex: "^https?://www\\.(.+)"
    replacement: "https://${1}"
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-srv-klnavi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: prod-www-to-non-www@kubernetescrd,prod-https-redirectscheme@kubernetescrd,prod-security-headers@kubernetescrd
spec:
  tls:
  - hosts:
    - 'klnavi.de'
    secretName: public-srv-klnavi-dev-tls
  rules:
  - host: 'klnavi.de'
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: digitransit-ui-service
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routing-srv-klnavi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: prod-strip-prefix@kubernetescrd,prod-www-to-non-www@kubernetescrd,prod-https-redirectscheme@kubernetescrd,prod-security-headers@kubernetescrd
spec:
  tls:
  - hosts:
    - 'routing.klnavi.de'
    secretName: routing-public-srv-klnavi-tls
  rules:
  - host: 'routing.klnavi.de'
    http:
      paths:
        - path: /pedestrian/standard
          pathType: Prefix
          backend:
            service:
              name: opentripplanner-standard-service
              port:
                number: 80   
        - path: /pedestrian/vision-impaired
          pathType: Prefix
          backend:
            service:
              name: opentripplanner-vision-impaired-service
              port:
                number: 80
